--- a/About.html
+++ b/About.html
@@ -16,7 +16,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/JJPT.css" rel="stylesheet">
+    <link href="css/JJPT.css?version=1" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -44,7 +44,7 @@
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
+                <ul id="test" class="nav navbar-nav">
                     <li class="active">
                         <a href="About.html">About</a>
                     </li>
@@ -52,13 +52,13 @@
                         <a href="Programmes.html">Programmes</a>
                     </li>
                     <li>
-                        <a href="#">Shop</a>
+                        <a href="Shop.html">Shop</a>
                     </li>
                     <li>
-                        <a href="#">Blog</a>
+                        <a href="Blog.html">Blog</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="Contact.html">Contact</a>
                     </li>
                     <li>
                         <a href="https://www.facebook.com/joshtjjones"><img alt="follow me on facebook" src="images/facebook2.png" height='17' width='17' border=0></a>
@@ -90,7 +90,7 @@
             <div class="col-lg-5 col-md-5 col-sm-5 hidden-xs">
                 <h2 class="uppercase" style="max-width:100%;margin-top:0px !important;border-top-width:0px;">EXPERT FITNESS, EXPERT NUTRITION, DESIGNED FOR YOUR LIFESTYLE</h2>
             </div>
-            <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
+            <div class="col-lg-7 col-md-7 col-sm-7 hidden-xs">
                 <p>Using his unique integrated method, Josh has worked successfully with numerous high profile clients, constantly evolving his approach to ensure that his clients have access to the most cutting edge and proven methods of body fat reduction and muscle building through his programmes.</p>
                 <p>Working from his Cheltenham office in the UK, Josh’s handpicked team deliver his method in the most professional, accessible and life-changing manner. Discretion is paramount and endorsement is never requested nor used.</p>
                 <p>Josh is also recognised as a UK powerlifting champion, winning multpile awards across several weight divisions.</p>
@@ -103,12 +103,6 @@
         <div class="text-center col-lg-12 col-md-12 col-sm-4=12 hidden-xs">
             <h2>TESTIMONIALS</h2>
         <div id="testimonialCarousel" class="carousel slide hidden-xs">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
 
         <!-- Wrapper for Slides -->
         <div class="carousel-inner">
@@ -193,6 +187,12 @@
         </div>
         </section>
             
+    <!-- /.container -->
+
+    <div class="container">
+
+        <hr>
+
         <!-- Footer -->
         <footer>
             <div class="row">
@@ -203,7 +203,7 @@
             <!-- /.row -->
         </footer>
 
-
+    </div>
     <!-- /.container -->
 
     <!-- jQuery -->
