--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <link rel="icon" href="Images/JJPT.png">
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/JJPT.css?version=1" rel="stylesheet">
+    <link href="JJPT.css?version=1" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -61,13 +61,13 @@
                         <a href="Contact.html">Contact</a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/joshtjjones"><img alt="follow me on facebook" src="images/facebook2.png" height='17' width='17' border=0></a>
+                        <a href="https://www.facebook.com/joshtjjones"><img alt="follow me on facebook" src="facebook2.png" height='17' width='17' border=0></a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/Joshtjones92"><img alt="follow me on twitter" src="images/twitter2.png" height='17' width='17' border=0></a>
+                        <a href="https://twitter.com/Joshtjones92"><img alt="follow me on twitter" src="itwitter2.png" height='17' width='17' border=0></a>
                     </li>
                     <li>
-                        <a href="https://www.instagram.com/jonesy920"><img alt="follow me on instagram" src="images/instagram2.png" height='17' width='17' border=0></a>
+                        <a href="https://www.instagram.com/jonesy920"><img alt="follow me on instagram" src="instagram2.png" height='17' width='17' border=0></a>
                     </li>
                 </ul>
             </div>
@@ -89,19 +89,19 @@
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="fill"><img class="center-block" src="Images/slider4.jpg" onmouseover="this.src='Images/slider.jpg'" onmouseout="this.src='Images/slider4.jpg'" width="90%" height="100%" alt="JJPT image"></div>
+                <div class="fill"><img class="center-block" src="Islider4.jpg" onmouseover="this.src='slider.jpg'" onmouseout="this.src='slider4.jpg'" width="90%" height="100%" alt="JJPT image"></div>
                 <div class="carousel-caption">
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill"><img class="center-block" src="Images/slider5.jpg" onmouseover="this.src='Images/slider.jpg'" onmouseout="this.src='Images/slider5.jpg'" width="90%" height="100%" alt="JJPT image"></div>
+                <div class="fill"><img class="center-block" src="slider5.jpg" onmouseover="this.src='slider.jpg'" onmouseout="this.src='slider5.jpg'" width="90%" height="100%" alt="JJPT image"></div>
                 <div class="carousel-caption">
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill"><img class="center-block" src="Images/slider8.jpg" onmouseover="this.src='Images/slider.jpg'" onmouseout="this.src='Images/slider8.jpg'" width="90%" height="100%" alt="JJPT image"></div>
+                <div class="fill"><img class="center-block" src="slider8.jpg" onmouseover="this.src='slider.jpg'" onmouseout="this.src='slider8.jpg'" width="90%" height="100%" alt="JJPT image"></div>
                 <div class="carousel-caption">
                 </div>
             </div>
@@ -126,14 +126,14 @@
             <div class="text-center col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <a id="tester" href="About.html">
                     <h3 id="head-text" style="color:black;">About Josh</h3>
-                    <img class="homepic" src="Images/Josh-Jones.jpg" alt="JJPT image" width="100%" height="100%">
+                    <img class="homepic" src="Josh-Jones.jpg" alt="JJPT image" width="100%" height="100%">
                      <p id="sub-text">Josh is a fully qualified Level 3 personal trainer with a BSc (Hons) Degree in sports coaching from the University of Gloucestershire where he studied strength and conditioning, program design, nutrition and much more. Josh has put this experience into practical use and is a UK powerlifting champion. With this knowledge Josh will design a personalised program to suit, guide and motivate you every step of the way.</p>  
                 </a>      
             </div>
             <div class="text-center col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <a id="tester" href="Programmes.html">
                     <h3 id="head-text" style="color:black;">Programmes</h3>
-                    <img class="homepic" src="Images/programme.jpg" alt="JJPT image" width="100%" height="100%">
+                    <img class="homepic" src="programme.jpg" alt="JJPT image" width="100%" height="100%">
                     <p style="color:black;">Josh personally supports his exclusive clients with bespoke, thoughtfully designed programmes to bring about the most radical body transformation, nutrition and lifestyle changes. Available worldwide...</p>
                 </a>
             </div>
@@ -141,14 +141,14 @@
                         <div class="text-center col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <a id="tester" href="Shop.html">
                     <h3 id="head-text" style="color:black;">Shop</h3>
-                    <img class="homepic" src="Images/shop.jpg" alt="JJPT image" width="100%" height="100%">
+                    <img class="homepic" src="shop.jpg" alt="JJPT image" width="100%" height="100%">
                     <p style="color:black;">Josh is proud to be a retailer for some of the UK's leading health and fitness products. The store provides a vast range of sports nutrition, health food and gym clothing, perfect to help you achieve those goals</p>
                 </a>
             </div>
             <div class="text-center col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <a id="tester" href="#">
                     <h3 id="head-text" style="color:black;">Blog</h3>
-                    <img class="homepic" src="Images/blog.jpg" alt="JJPT image" width="100%" height="100%">
+                    <img class="homepic" src="blog.jpg" alt="JJPT image" width="100%" height="100%">
                     <p style="color:black;">Here, you'll discover what's new in the fitness world, including the latest views on nutrition and sports supplements as well as little known tips and secrets that will help fast track your success.</p>
                 </a>
             </div>
@@ -179,7 +179,7 @@
             </div>
             <div class="text-center col-lg-4 col-md-4 hidden-sm hidden-xs">
                 <h3 style="color:black;">The latest by Josh Jones</h3>
-                <img class="homepic" src="Images/blog1.jpg" alt="JJPT image" width="100%" height="100%">
+                <img class="homepic" src="blog1.jpg" alt="JJPT image" width="100%" height="100%">
                 <a href="#">
                     <p style="color:black;">Thurs 25/07/16 - How To Eat More</p>
                 </a>
@@ -197,16 +197,16 @@
                 <h2>INSTAGRAM | <a id="tester" href="https://www.instagram.com/jonesy920"><span style="color:grey">FOLLOW US</span></a></h2>
             </div>
             <div class="col-lg-3 col-md-3 hidden-sm hidden-xs">
-                <img class="homepic" src="Images/Josh-Jones.jpg" alt="JJPT image" width="100%" height="100%">
+                <img class="homepic" src="Josh-Jones.jpg" alt="JJPT image" width="100%" height="100%">
             </div>
             <div class="col-lg-3 col-md-3 hidden-sm hidden-xs">
-                <img class="homepic" src="Images/insta1.jpg" alt="JJPT image" width="100%" height="100%">
+                <img class="homepic" src="insta1.jpg" alt="JJPT image" width="100%" height="100%">
             </div>
             <div class="col-lg-3 col-md-3 hidden-sm hidden-xs">
-                <img class="homepic" src="Images/insta2.jpg" alt="JJPT image" width="100%" height="100%">
+                <img class="homepic" src="insta2.jpg" alt="JJPT image" width="100%" height="100%">
             </div>
             <div class="col-lg-3 col-md-3 hidden-sm hidden-xs">
-                <img class="homepic" src="Images/insta3.jpg" alt="JJPT image" width="100%" height="100%">
+                <img class="homepic" src="insta3.jpg" alt="JJPT image" width="100%" height="100%">
             </div>
         </div>
 
@@ -224,7 +224,7 @@
                                     <div class="carousel-caption">
                                         <div class="col-left-desktop col-md-3 col-sm-3 hidden-xs">
                                             <h3 class="source uppercase text-right-sm text-right-md text-right-lg text-center-xs">Chris,<br> Walton</h3>
-                                            <img class="homepic" src="Images/cwalton.jpg" alt="JJPT image" width="100%" height="100%">
+                                            <img class="homepic" src="cwalton.jpg" alt="JJPT image" width="100%" height="100%">
                                         </div>
                                         <div class="col-right col-md-9 col-sm-9 col-xs-12 text-center-xs">
                                             <h4 class="uppercase"><span>IT IS THE FIRST TIME IN YEARS THAT I FEEL MYSELF AGAIN</span></h4>
@@ -239,7 +239,7 @@
                                     <div class="carousel-caption">
                                         <div class="col-left-desktop col-md-3 col-sm-3 hidden-xs">
                                             <h3 class="source uppercase text-right-sm text-right-md text-right-lg text-center-xs">Alex,<br> Bland</h3>
-                                            <img class="homepic" src="Images/abland.jpg" alt="JJPT image" width="100%" height="100%">
+                                            <img class="homepic" src="abland.jpg" alt="JJPT image" width="100%" height="100%">
                                         </div>
                                         <div class="col-right col-md-9 col-sm-9 col-xs-12 text-center-xs">
                                             <h4 class="uppercase"><span>I FOUND THE WHOLE EXPERIENCE LITERALLY LIFE CHANGING</span></h4>
@@ -255,7 +255,7 @@
                                     <div class="carousel-caption">
                                         <div class="col-left-desktop col-md-3 col-sm-3 hidden-xs">
                                             <h3 class="source uppercase text-right-sm text-right-md text-right-lg text-center-xs">Rachel,<br> Hewitt</h3>
-                                            <img class="homepic" src="Images/rhewitt.jpg" alt="JJPT image" width="100%" height="100%">
+                                            <img class="homepic" src="rhewitt.jpg" alt="JJPT image" width="100%" height="100%">
                                         </div>
                                         <div class="col-right col-md-9 col-sm-9 col-xs-12 text-center-xs">
                                             <h4 class="uppercase"><span>IF YOU WANT TO LOSE WEIGHT ,AND KEEP IT OFF, IN A SIMPLE AND EFFECTIVE WAY THEN THIS IS THE RIGHT STEP FOR YOU.</span></h4>
