--- a/Blog.html
+++ b/Blog.html
@@ -10,7 +10,7 @@
     <meta name="author" content="CWalton">
 
     <title>JJ Personal Trainer | About</title>
-    <link rel="icon" href="Images/JJPT.png">
+    <link rel="icon" href="JJPT.png">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -61,13 +61,13 @@
                         <a href="Contact.html">Contact</a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/joshtjjones"><img alt="follow me on facebook" src="images/facebook2.png" height='17' width='17' border=0></a>
+                        <a href="https://www.facebook.com/joshtjjones"><img alt="follow me on facebook" src="facebook2.png" height='17' width='17' border=0></a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/Joshtjones92"><img alt="follow me on twitter" src="images/twitter2.png" height='17' width='17' border=0></a>
+                        <a href="https://twitter.com/Joshtjones92"><img alt="follow me on twitter" src="twitter2.png" height='17' width='17' border=0></a>
                     </li>
                     <li>
-                        <a href="https://www.instagram.com/jonesy920"><img alt="follow me on instagram" src="images/instagram2.png" height='17' width='17' border=0></a>
+                        <a href="https://www.instagram.com/jonesy920"><img alt="follow me on instagram" src="instagram2.png" height='17' width='17' border=0></a>
                     </li>
                 </ul>
             </div>
@@ -82,7 +82,7 @@
         <div class="row">
             <div class="text-left col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h2>About Josh</h2>
-                <img class="homepic" src="Images/Josh-Jones.jpg" alt="JJPT image" width="100%" height="100%">
+                <img class="homepic" src="Josh-Jones.jpg" alt="JJPT image" width="100%" height="100%">
             </div>
             <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
                 <p class="lrg-body">Josh is a fully qualified Level 3 personal trainer with a BSc (Hons) Degree in sports coaching from the University of Gloucestershire where he studied strength and conditioning, program design, nutrition and much more. Josh has put this experience into practical use and is a UK powerlifting champion.  With this knowledge Josh will design a personalised program to suit, guide and motivate you every step of the way.</p>
@@ -111,7 +111,7 @@
                 <div class="carousel-caption">
                     <div class="col-left-desktop col-md-3 col-sm-3 hidden-xs">
                     <h3 class="source uppercase text-right-sm text-right-md text-right-lg text-center-xs">Chris,<br> Walton</h3>
-                    <img class="homepic" src="Images/cwalton.jpg" alt="JJPT image" width="100%" height="100%">    
+                    <img class="homepic" src="cwalton.jpg" alt="JJPT image" width="100%" height="100%">    
                     </div>
                     <div class="col-right col-md-9 col-sm-9 col-xs-12 text-center-xs">
                     <h4 class="uppercase"><span>IT IS THE FIRST TIME IN YEARS THAT I FEEL MYSELF AGAIN</span></h4>
@@ -126,7 +126,7 @@
                 <div class="carousel-caption">
                     <div class="col-left-desktop col-md-3 col-sm-3 hidden-xs">
                     <h3 class="source uppercase text-right-sm text-right-md text-right-lg text-center-xs">Alex,<br> Bland</h3>
-                    <img class="homepic" src="Images/abland.jpg" alt="JJPT image" width="100%" height="100%">    
+                    <img class="homepic" src="abland.jpg" alt="JJPT image" width="100%" height="100%">    
                     </div>
                     <div class="col-right col-md-9 col-sm-9 col-xs-12 text-center-xs">
                     <h4 class="uppercase"><span>I FOUND THE WHOLE EXPERIENCE LITERALLY LIFE CHANGING</span></h4>
@@ -142,7 +142,7 @@
                 <div class="carousel-caption">
                     <div class="col-left-desktop col-md-3 col-sm-3 hidden-xs">
                     <h3 class="source uppercase text-right-sm text-right-md text-right-lg text-center-xs">Rachel,<br> Hewitt</h3>
-                    <img class="homepic" src="Images/rhewitt.jpg" alt="JJPT image" width="100%" height="100%">    
+                    <img class="homepic" src="rhewitt.jpg" alt="JJPT image" width="100%" height="100%">    
                     </div>
                     <div class="col-right col-md-9 col-sm-9 col-xs-12 text-center-xs">
                     <h4 class="uppercase"><span>IF YOU WANT TO LOSE WEIGHT ,AND KEEP IT OFF, IN A SIMPLE AND EFFECTIVE WAY THEN THIS IS THE RIGHT STEP FOR YOU.</span></h4>
