--- a/Programmes.html
+++ b/Programmes.html
@@ -10,13 +10,13 @@
     <meta name="author" content="CWalton">
 
     <title>JJ Personal Trainer | Programmes</title>
-    <link rel="icon" href="Images/JJPT.png">
+    <link rel="icon" href="JJPT.png">
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/JJPT.css?version=1" rel="stylesheet">
+    <link href="JJPT.css?version=1" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -61,13 +61,13 @@
                         <a href="Contact.html">Contact</a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/joshtjjones"><img alt="follow me on facebook" src="images/facebook2.png" height='17' width='17' border=0></a>
+                        <a href="https://www.facebook.com/joshtjjones"><img alt="follow me on facebook" src="facebook2.png" height='17' width='17' border=0></a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/Joshtjones92"><img alt="follow me on twitter" src="images/twitter2.png" height='17' width='17' border=0></a>
+                        <a href="https://twitter.com/Joshtjones92"><img alt="follow me on twitter" src="twitter2.png" height='17' width='17' border=0></a>
                     </li>
                     <li>
-                        <a href="https://www.instagram.com/jonesy920"><img alt="follow me on instagram" src="images/instagram2.png" height='17' width='17' border=0></a>
+                        <a href="https://www.instagram.com/jonesy920"><img alt="follow me on instagram" src="instagram2.png" height='17' width='17' border=0></a>
                     </li>
                 </ul>
             </div>
@@ -89,7 +89,7 @@
         <div class="row">
             <section class="programmes-header">
             <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
-                <img  src="images/programme1.jpg" alt="JJPT image" width="100%" height="100%">
+                <img  src="programme1.jpg" alt="JJPT image" width="100%" height="100%">
             </div>
             <div class="text-center col-lg-5 col-md-5 col-sm-5 col-xs-12">
                 <h3>THE INTENSIVE</h3>
@@ -102,7 +102,7 @@
         <div class="row">
             <section class="programmes-header">
             <div class="hidden-lg hidden-md hidden-sm col-xs-12">
-                <img  src="images/programme2.jpg" alt="JJPT image" width="100%" height="100%">
+                <img  src="programme2.jpg" alt="JJPT image" width="100%" height="100%">
             </div>
             <div class="text-center col-lg-5 col-md-5 col-sm-5 col-xs-12">
                 <h3>OPTIMUM WEIGHT LOSS</h3>
@@ -110,7 +110,7 @@
                 <p style="color:grey;">JoshJonesPT@hotmail.com</p>
             </div>
             <div class="col-lg-7 col-md-7 col-sm-7 hidden-xs">
-                <img  src="images/programme2.jpg" alt="JJPT image" width="100%" height="100%">
+                <img  src="programme2.jpg" alt="JJPT image" width="100%" height="100%">
             </div>
                 </section>
         </div>
@@ -118,7 +118,7 @@
         <div class="row">
             <section class="programmes-header">
             <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
-                <img  src="images/programme3.jpg" alt="JJPT image" width="100%" height="100%">
+                <img  src="/programme3.jpg" alt="JJPT image" width="100%" height="100%">
             </div>
             <div class="text-center col-lg-5 col-md-5 col-sm-5 col-xs-12">
                 <h3>THE INTENSIVE LIGHT</h3>
@@ -131,7 +131,7 @@
         <div class="row">
             <section class="programmes-header">
             <div class="hidden-lg hidden-md hidden-sm col-xs-12">
-                <img  src="images/programme4.jpg" alt="JJPT image" width="100%" height="100%">
+                <img  src="/programme4.jpg" alt="JJPT image" width="100%" height="100%">
             </div>
             <div class="text-center col-lg-5 col-md-5 col-sm-5 col-xs-12">
                 <h3>MAINTENANCE</h3>
@@ -139,7 +139,7 @@
                 <p style="color:grey;">JoshJonesPT@hotmail.com</p>
             </div>
             <div class="col-lg-7 col-md-7 col-sm-7 hidden-xs">
-                <img  src="images/programme4.jpg" alt="JJPT image" width="100%" height="100%">
+                <img  src="programme4.jpg" alt="JJPT image" width="100%" height="100%">
             </div>
             </section>
         </div>
@@ -147,7 +147,7 @@
         <div class="row">
             <section class="programmes-header">
             <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
-                <img  src="images/programme6.jpg" alt="JJPT image" width="100%" height="100%">
+                <img  src="programme6.jpg" alt="JJPT image" width="100%" height="100%">
             </div>
             <div class="text-center col-lg-5 col-md-5 col-sm-5 col-xs-12">
                 <h3>THE EXCLUSIVE</h3>
@@ -172,7 +172,7 @@
                 <div class="carousel-caption">
                     <div class="col-left-desktop col-md-3 col-sm-3 hidden-xs">
                     <h3 class="source uppercase text-right-sm text-right-md text-right-lg text-center-xs">Chris,<br> Walton</h3>
-                    <img class="homepic" src="Images/cwalton.jpg" alt="JJPT image" width="100%" height="100%">    
+                    <img class="homepic" src="cwalton.jpg" alt="JJPT image" width="100%" height="100%">    
                     </div>
                     <div class="col-right col-md-9 col-sm-9 col-xs-12 text-center-xs">
                     <h4 class="uppercase"><span>IT IS THE FIRST TIME IN YEARS THAT I FEEL MYSELF AGAIN</span></h4>
@@ -187,7 +187,7 @@
                 <div class="carousel-caption">
                     <div class="col-left-desktop col-md-3 col-sm-3 hidden-xs">
                     <h3 class="source uppercase text-right-sm text-right-md text-right-lg text-center-xs">Alex,<br> Bland</h3>
-                    <img class="homepic" src="Images/abland.jpg" alt="JJPT image" width="100%" height="100%">    
+                    <img class="homepic" src="abland.jpg" alt="JJPT image" width="100%" height="100%">    
                     </div>
                     <div class="col-right col-md-9 col-sm-9 col-xs-12 text-center-xs">
                     <h4 class="uppercase"><span>I FOUND THE WHOLE EXPERIENCE LITERALLY LIFE CHANGING</span></h4>
@@ -203,7 +203,7 @@
                 <div class="carousel-caption">
                     <div class="col-left-desktop col-md-3 col-sm-3 hidden-xs">
                     <h3 class="source uppercase text-right-sm text-right-md text-right-lg text-center-xs">Rachel,<br> Hewitt</h3>
-                    <img class="homepic" src="Images/rhewitt.jpg" alt="JJPT image" width="100%" height="100%">    
+                    <img class="homepic" src="rhewitt.jpg" alt="JJPT image" width="100%" height="100%">    
                     </div>
                     <div class="col-right col-md-9 col-sm-9 col-xs-12 text-center-xs">
                     <h4 class="uppercase"><span>IF YOU WANT TO LOSE WEIGHT ,AND KEEP IT OFF, IN A SIMPLE AND EFFECTIVE WAY THEN THIS IS THE RIGHT STEP FOR YOU.</span></h4>
