--- a/Shop.html
+++ b/Shop.html
@@ -10,7 +10,7 @@
     <meta name="author" content="CWalton">
 
     <title>JJ Personal Trainer | Shop</title>
-    <link rel="icon" href="Images/JJPT.png">
+    <link rel="icon" href="JJPT.png">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -61,13 +61,13 @@
                         <a href="Contact.html">Contact</a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/joshtjjones"><img alt="follow me on facebook" src="images/facebook2.png" height='17' width='17' border=0></a>
+                        <a href="https://www.facebook.com/joshtjjones"><img alt="follow me on facebook" src="facebook2.png" height='17' width='17' border=0></a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/Joshtjones92"><img alt="follow me on twitter" src="images/twitter2.png" height='17' width='17' border=0></a>
+                        <a href="https://twitter.com/Joshtjones92"><img alt="follow me on twitter" src="twitter2.png" height='17' width='17' border=0></a>
                     </li>
                     <li>
-                        <a href="https://www.instagram.com/jonesy920"><img alt="follow me on instagram" src="images/instagram2.png" height='17' width='17' border=0></a>
+                        <a href="https://www.instagram.com/jonesy920"><img alt="follow me on instagram" src="instagram2.png" height='17' width='17' border=0></a>
                     </li>
                 </ul>
             </div>
@@ -104,13 +104,13 @@
                             </ol>
                             <div class="carousel-inner shopcara">
                                 <div class="item active">
-                                    <img class="slide-image center-block" src="images/gymshop.png" width="80%" height="100%" alt="JJPT image">
+                                    <img class="slide-image center-block" src="gymshop.png" width="80%" height="100%" alt="JJPT image">
                                 </div>
                                 <div class="item">
-                                    <img class="slide-image center-block" src="images/gymshop1.jpg" width="80%" height="100%" alt="JJPT image">
+                                    <img class="slide-image center-block" src="gymshop1.jpg" width="80%" height="100%" alt="JJPT image">
                                 </div>
                                 <div class="item">
-                                    <img class="slide-image center-block" src="images/gymshop2.jpg" width="80%" height="100%" alt="JJPT image">
+                                    <img class="slide-image center-block" src="gymshop2.jpg" width="80%" height="100%" alt="JJPT image">
                                 </div>
                             </div>
                             <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
