--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="CWalton">
 
     <title>JJ Personal Trainer</title>
-    <link rel="icon" href="Images/JJPT.png">
+    <link rel="icon" href="JJPT.png">
 
     <!-- Bootstrap Core CSS -->
     <link href="bootstrap.min.css" rel="stylesheet">
@@ -64,7 +64,7 @@
                         <a href="https://www.facebook.com/joshtjjones"><img alt="follow me on facebook" src="facebook2.png" height='17' width='17' border=0></a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/Joshtjones92"><img alt="follow me on twitter" src="itwitter2.png" height='17' width='17' border=0></a>
+                        <a href="https://twitter.com/Joshtjones92"><img alt="follow me on twitter" src="twitter2.png" height='17' width='17' border=0></a>
                     </li>
                     <li>
                         <a href="https://www.instagram.com/jonesy920"><img alt="follow me on instagram" src="instagram2.png" height='17' width='17' border=0></a>
