--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="fill"><img class="center-block" src="Images/slider4.jpg" onmouseover="this.src='Images/slider.jpg'" onmouseout="this.src='Images/slider4.jpg'" width="90%" height="100%" alt="JJPT image"></div>
+                <div class="fill"><img class="center-block" src="slider4.jpg" onmouseover="this.src='slider.jpg'" onmouseout="this.src='slider4.jpg'" width="90%" height="100%" alt="JJPT image"></div>
                 <div class="carousel-caption">
                 </div>
             </div>
