--- a/index.html
+++ b/index.html
@@ -89,19 +89,19 @@
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="fill"><img class="center-block" src="slider4.jpg" onmouseover="this.src='slider.jpg'" onmouseout="this.src='slider4.jpg'" width="90%" height="100%" alt="JJPT image"></div>
+                <div class="fill"><img class="center-block" src="Slider4.jpg" onmouseover="this.src='Slider.jpg'" onmouseout="this.src='Slider4.jpg'" width="90%" height="100%" alt="JJPT image"></div>
                 <div class="carousel-caption">
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill"><img class="center-block" src="slider5.jpg" onmouseover="this.src='slider.jpg'" onmouseout="this.src='slider5.jpg'" width="90%" height="100%" alt="JJPT image"></div>
+                <div class="fill"><img class="center-block" src="Slider5.jpg" onmouseover="this.src='Slider.jpg'" onmouseout="this.src='Slider5.jpg'" width="90%" height="100%" alt="JJPT image"></div>
                 <div class="carousel-caption">
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill"><img class="center-block" src="slider8.jpg" onmouseover="this.src='slider.jpg'" onmouseout="this.src='slider8.jpg'" width="90%" height="100%" alt="JJPT image"></div>
+                <div class="fill"><img class="center-block" src="Slider8.jpg" onmouseover="this.src='Slider.jpg'" onmouseout="this.src='Slider8.jpg'" width="90%" height="100%" alt="JJPT image"></div>
                 <div class="carousel-caption">
                 </div>
             </div>
