--- a/index.html
+++ b/index.html
@@ -126,14 +126,14 @@
             <div class="text-center col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <a id="tester" href="About.html">
                     <h3 id="head-text" style="color:black;">About Josh</h3>
-                    <img class="homepic" src="Josh-Jones.jpg" alt="JJPT image" width="100%" height="100%">
-                     <p id="sub-text">Josh is a fully qualified Level 3 personal trainer with a BSc (Hons) Degree in sports coaching from the University of Gloucestershire where he studied strength and conditioning, program design, nutrition and much more. Josh has put this experience into practical use and is a UK powerlifting champion. With this knowledge Josh will design a personalised program to suit, guide and motivate you every step of the way.</p>  
+                    <img class="homepic" src="Josh-Jones.jpg" alt="JJPT image" width="90%" height="90%">
+                     <p id="sub-text">Josh is a fully qualified Level 3 personal trainer with a BSc (Hons) Degree in sports coaching from the University of Gloucestershire. With this knowledge Josh will design a personalised program to suit, guide and motivate you every step of the way.</p>  
                 </a>      
             </div>
             <div class="text-center col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <a id="tester" href="Programmes.html">
                     <h3 id="head-text" style="color:black;">Programmes</h3>
-                    <img class="homepic" src="programme.jpg" alt="JJPT image" width="100%" height="100%">
+                    <img class="homepic" src="programme.jpg" alt="JJPT image" width="90%" height="90%">
                     <p style="color:black;">Josh personally supports his exclusive clients with bespoke, thoughtfully designed programmes to bring about the most radical body transformation, nutrition and lifestyle changes. Available worldwide...</p>
                 </a>
             </div>
@@ -197,16 +197,16 @@
                 <h2>INSTAGRAM | <a id="tester" href="https://www.instagram.com/jonesy920"><span style="color:grey">FOLLOW US</span></a></h2>
             </div>
             <div class="col-lg-3 col-md-3 hidden-sm hidden-xs">
-                <img class="homepic" src="Josh-Jones.jpg" alt="JJPT image" width="100%" height="100%">
+                <a href="https://www.instagram.com/jonesy920"><img class="homepic" src="Josh-Jones.jpg" alt="JJPT image" width="100%" height="100%"></a>
             </div>
             <div class="col-lg-3 col-md-3 hidden-sm hidden-xs">
-                <img class="homepic" src="insta1.jpg" alt="JJPT image" width="100%" height="100%">
+                <a href="https://www.instagram.com/jonesy920"><img class="homepic" src="insta1.jpg" alt="JJPT image" width="100%" height="100%"></a>
             </div>
             <div class="col-lg-3 col-md-3 hidden-sm hidden-xs">
-                <img class="homepic" src="insta2.jpg" alt="JJPT image" width="100%" height="100%">
+                <a href="https://www.instagram.com/jonesy920"><img class="homepic" src="insta2.jpg" alt="JJPT image" width="100%" height="100%"></a>
             </div>
             <div class="col-lg-3 col-md-3 hidden-sm hidden-xs">
-                <img class="homepic" src="insta3.jpg" alt="JJPT image" width="100%" height="100%">
+                <a href="https://www.instagram.com/jonesy920"><img class="homepic" src="insta3.jpg" alt="JJPT image" width="100%" height="100%"></a>
             </div>
         </div>
 
