--- a/Shop.html
+++ b/Shop.html
@@ -83,7 +83,7 @@
 
             <div class="col-lg-3 col-md-3 col-sm-3 hidden-xs">
                 <ul class="list-group nav nav-pills">
-                    <li><a href="shop.html">All</a></li>
+                    <li><a href="Shop.html">All</a></li>
                     <li><a data-toggle="pill" href="#bodyb">Bodybuilding Supplements</a></li>
                     <li><a data-toggle="pill" href="#sports">Sportswear</a></li>
                     <li><a data-toggle="pill" href="#accesories">Accesories</a> </li>
