--- a/Contact.html
+++ b/Contact.html
@@ -86,7 +86,7 @@
             </div>
             <div class="text-center col-lg-3 col-md-3 hidden-sm hidden-xs">
                 <h3>Josh Jones</h3>
-                <img class="homepic" src="JoshJones.jpg" alt="JJPT image" width="100%" height="100%">
+                <img class="homepic" src="joshjones.jpg" alt="JJPT image" width="100%" height="100%">
             </div>
             <div class="col-lg-6 col-md-6 col-sm-9 hidden-xs">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2462.202683137132!2d-2.069755684894504!3d51.89376519020171!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48711bbee6bd8005%3A0x9933dbdbab3f935a!2sKeynsham+Rd%2C+Cheltenham+GL53+7PU!5e0!3m2!1sen!2suk!4v1470319187467" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
