--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <a id="tester" href="Blog.html">
                     <h3 id="head-text" style="color:grey;">Thurs 25/08/16</h3>
                     <h4 id="head-text" style="color:black;">10 Tips to Eliminate Sugar (and for the Right Reasons!)</h4>
-                    <p style="color:black;">While I’m not a dietitian/nutritionist/health coach/certified to guide you on an eating plan in any way, I have seen the dramatic impact of eliminating sugar on my overall health and well-being, even beyond my skin. If you’re considering eliminating (or lowering) your sugar intake, consider these 10 tips;</p>
+                    <p style="color:black;">I have recently seen the dramatic impact of eliminating sugar on my overall health and well-being, even beyond my skin. If you’re considering eliminating (or lowering) your sugar intake, consider these 10 tips;</p>
                     <ol>
                         <li>Know your why.</li>
                         <li>Do your research.</li>
