--- a/Blog.html
+++ b/Blog.html
@@ -100,33 +100,33 @@
             <tr>
                 <td>
                     <a href="#blog1" data-toggle="modal">
-                        <img class="btn tabpic" src="programme.jpg" alt="Blog1"><span>Blog1</span></a>
+                        <img class="btn tabpic" src="comingsoon.png" alt="Blog1"><span>Coming soon!</span></a>
                 </td>
 
                 <td>
                     <a href="#blog2" data-toggle="modal">
-                        <img class="btn tabpic" src="" alt="Blog2"><span>Blog2</span></a>
+                        <img class="btn tabpic" src="comingsoon.png" alt="Blog2"><span>Coming soon!</span></a>
                 </td>
 
                 <td>
                     <a href="#blog3" data-toggle="modal">
-                        <img class="btn tabpic" src="" alt="Blog3"><span>Blog3</span></a>
+                        <img class="btn tabpic" src="comingsoon.png" alt="Blog3"><span>Coming soon!</span></a>
                 </td>
             </tr>
             <tr>
                 <td>
                     <a href="#blog4" data-toggle="modal">
-                        <img class="btn tabpic" src="" alt="Blog4"><span>Blog4</span></a>
+                        <img class="btn tabpic" src="comingsoon.png" alt="Blog4"><span>Coming soon!</span></a>
                 </td>
 
                 <td>
                     <a href="#blog5" data-toggle="modal">
-                        <img class="btn tabpic" src="" alt="Blog5"><span>Blog5</span></a>
+                        <img class="btn tabpic" src="comingsoon.png" alt="Blog5"><span>Coming soon!</span></a>
                 </td>
 
                 <td>
                     <a href="#blog6" data-toggle="modal">
-                        <img class="btn tabpic" src="" alt="Blog6"><span>Blog6</span></a>
+                        <img class="btn tabpic" src="comingsoon.png" alt="Blog6"><span>Coming soon!</span></a>
                 </td>
             </tr>
         </tbody>
@@ -143,50 +143,50 @@
         <tbody>
             <tr>
                 <td>
-                    <button href="#blog1" data-toggle="modal">
-                        blog1
+                    <a class="btn btn-primary" href="#blog1" data-toggle="modal">
+                        Coming soon!
                         <br>
-                    </button>
+                    </a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <button href="#blog2" data-toggle="modal">
-                        blog2
+                    <a class="btn btn-primary" href="#blog2" data-toggle="modal">
+                        Coming soon!
                         <br>
-                    </button>
+                    </a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <button href="#blog3" data-toggle="modal">
-                        blog3
+                    <a class="btn btn-primary" href="#blog3" data-toggle="modal">
+                        Coming soon!
                         <br>
-                    </button>
+                    </a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <button href="#blog4" data-toggle="modal">
-                        blog4
+                    <a class="btn btn-primary" href="#blog4" data-toggle="modal">
+                        Coming soon!
                         <br>
-                    </button>
+                    </a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <button href="#blog5" data-toggle="modal">
-                        blog5
+                    <a class="btn btn-primary" href="#blog5" data-toggle="modal">
+                        Coming soon!
                         <br>
-                    </button>
+                    </a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <button href="#blog6" data-toggle="modal">
-                        blog6
+                    <a class="btn btn-primary" href="#blog6" data-toggle="modal">
+                        Coming soon!
                         <br>
-                    </button>
+                    </a>
                 </td>
             </tr>
         </tbody>
@@ -202,9 +202,10 @@
         <div class="modal-content">
             <div class="modal-header">
                 <span class="close btn btn-default" data-dismiss="modal">x</span>
-                <h4><b>Blog1</b></h4>
+                <h4><b>Coming soon!</b></h4>
             </div>
             <div class="modal-body">
+                <center><img src="comingsoon.png" class="img-responsive" alt="JJPT image" align="middle"></center>
             </div>
             <div class="modal-footer">
                 <a class="btn btn-default" data-dismiss="modal">Close</a></div>
@@ -217,10 +218,10 @@
         <div class="modal-content">
             <div class="modal-header">
                 <span class="close btn btn-default" data-dismiss="modal">x</span>
-                <h4><b>Blog2</b></h4>
+                <h4><b>Coming soon!</b></h4>
             </div>
             <div class="modal-body">
-                <center><img src="programme1.jpg" class="img-responsive" alt="JJPT image" align="middle"></center>
+                <center><img src="comingsoon.png" class="img-responsive" alt="JJPT image" align="middle"></center>
             </div>
             <div class="modal-footer">
                 <a class="btn btn-default" data-dismiss="modal">Close</a></div>
@@ -233,9 +234,10 @@
         <div class="modal-content">
             <div class="modal-header">
                 <span class="close btn btn-default" data-dismiss="modal">x</span>
-                <h4><b>Blog3</b></h4>
+                <h4><b>Coming soon!</b></h4>
             </div>
             <div class="modal-body">
+                <center><img src="comingsoon.png" class="img-responsive" alt="JJPT image" align="middle"></center>
             </div>
             <div class="modal-footer">
                 <a class="btn btn-default" data-dismiss="modal">Close</a></div>
@@ -248,10 +250,10 @@
         <div class="modal-content">
             <div class="modal-header">
                 <span class="close btn btn-default" data-dismiss="modal">x</span>
-                <h4><b>Blog4</b></h4>
+                <h4><b>Coming soon!</b></h4>
             </div>
             <div class="modal-body">
-                <center><img src="programme1.jpg" class="img-responsive" alt="JJPT image" align="middle"></center>
+                <center><img src="comingsoon.png" class="img-responsive" alt="JJPT image" align="middle"></center>
             </div>
             <div class="modal-footer">
                 <a class="btn btn-default" data-dismiss="modal">Close</a></div>
@@ -264,10 +266,10 @@
         <div class="modal-content">
             <div class="modal-header">
                 <span class="close btn btn-default" data-dismiss="modal">x</span>
-                <h4><b>Blog5</b></h4>
+                <h4><b>Coming soon!</b></h4>
             </div>
             <div class="modal-body">
-                <center><img src="programme1.jpg" class="img-responsive" alt="JJPT image" align="middle"></center>
+                <center><img src="comingsoon.png" class="img-responsive" alt="JJPT image" align="middle"></center>
             </div>
             <div class="modal-footer">
                 <a class="btn btn-default" data-dismiss="modal">Close</a></div>
@@ -280,10 +282,10 @@
         <div class="modal-content">
             <div class="modal-header">
                 <span class="close btn btn-default" data-dismiss="modal">x</span>
-                <h4><b>Blog6</b></h4>
+                <h4><b>Coming soon!</b></h4>
             </div>
             <div class="modal-body">
-                <center><img src="programme1.jpg" class="img-responsive" alt="DWllp image" align="middle"></center>
+                <center><img src="comingsoon.png" class="img-responsive" alt="DWllp image" align="middle"></center>
             </div>
             <div class="modal-footer">
                 <a class="btn btn-default" data-dismiss="modal">Close</a></div>
