--- a/index.html
+++ b/index.html
@@ -141,14 +141,14 @@
                         <div class="text-center col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <a id="tester" href="Shop.html">
                     <h3 id="head-text" style="color:black;">Shop</h3>
-                    <img class="homepic" src="shop.jpg" alt="JJPT image" width="100%" height="100%">
+                    <img class="homepic" src="shop.jpg" alt="JJPT image" width="90%" height="90%">
                     <p style="color:black;">Josh is proud to be a retailer for some of the UK's leading health and fitness products. The store provides a vast range of sports nutrition, health food and gym clothing, perfect to help you achieve those goals</p>
                 </a>
             </div>
             <div class="text-center col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <a id="tester" href="#">
                     <h3 id="head-text" style="color:black;">Blog</h3>
-                    <img class="homepic" src="blog.jpg" alt="JJPT image" width="100%" height="100%">
+                    <img class="homepic" src="blog.jpg" alt="JJPT image" width="90%" height="90%">
                     <p style="color:black;">Here, you'll discover what's new in the fitness world, including the latest views on nutrition and sports supplements as well as little known tips and secrets that will help fast track your success.</p>
                 </a>
             </div>
@@ -160,34 +160,22 @@
             </div>
             <div class="text-center col-lg-8 col-md-8 hidden-sm hidden-xs">
                 <a id="tester" href="Blog.html">
-                    <h3 id="head-text" style="color:grey;">Thurs 25/08/16</h3>
-                    <h4 id="head-text" style="color:black;">10 Tips to Eliminate Sugar (and for the Right Reasons!)</h4>
-                    <p style="color:black;">I have recently seen the dramatic impact of eliminating sugar on my overall health and well-being, even beyond my skin. If you’re considering eliminating (or lowering) your sugar intake, consider these 10 tips;</p>
-                    <ol>
-                        <li>Know your why.</li>
-                        <li>Do your research.</li>
-                        <li>Read every label.</li>
-                        <li>Talk about it — or don’t.</li>
-                        <li>Shift your focus.</li>
-                        <li>Cook for yourself.</li>
-                        <li>Try recipes without the ingredient, and try twice.</li>
-                        <li>Have a p.m. strategy.</li>
-                        <li>Increase healthy fats.</li>
-                        <li>Always be prepared.</li>
-                    </ol>
+                    <h3 id="head-text" style="color:grey;">Sat 01/10/16</h3>
+                    <h4 id="head-text" style="color:black;">Coming soon!</h4>
+                    <p style="color:black;">Here, you'll discover what's new in the fitness world, including the latest views on nutrition and sports supplements as well as little known tips and secrets that will help fast track your success.</p>
                     </a>
             </div>
             <div class="text-center col-lg-4 col-md-4 hidden-sm hidden-xs">
                 <h3 style="color:black;">The latest by Josh Jones</h3>
                 <img class="homepic" src="blog1.jpg" alt="JJPT image" width="100%" height="100%">
                 <a href="#">
-                    <p style="color:black;">Thurs 25/07/16 - How To Eat More</p>
+                    <p style="color:black;">Sat 01/10/16 - Coming soon!</p>
                 </a>
                 <a href="#">
-                    <p style="color:black;">Thurs 25/06/16 - Science of Steroids</p>
+                    <p style="color:black;">Sat 05/11/16 - Coming soon!</p>
                 </a>
                 <a href="#">
-                    <p style="color:black;">Thurs 25/05/16 - Stretching for Muscle Gains</p>
+                    <p style="color:black;">Sat 03/12/16 - Coming soon!</p>
                 </a>
             </div>
         </div>
