First live version ready

--- a/About.html
+++ b/About.html
@@ -16,7 +16,7 @@
     <link href="bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="JJPT.css?version=1" rel="stylesheet">
+    <link href="JJPT.css?version=1.1" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -115,9 +115,8 @@
                     </div>
                     <div class="col-right col-md-9 col-sm-9 col-xs-12 text-center-xs">
                     <h4 class="uppercase"><span>IT IS THE FIRST TIME IN YEARS THAT I FEEL MYSELF AGAIN</span></h4>
-                    <p>I want to thank Josh because he was exactly what I needed. Every time I went to see him he would encourage me and I left the gym feeling happier and strong. He gave me the perfect balance of understanding of my circumstances, but also pushing me each time so I did not make excuses. Josh was amazingly diligent when I had questions. For example, if I had a dinner out, He would immediately look for the restaurant and the menu and always gave me advise with a positive outlook. He would tell me all the things I could eat instead of focusing on what I should not.</p>
-                    <p>He also has great knowledge about nutrition and briliantly simple methods. Josh really made my process of loosing weight and reaching my goal easy and smooth. His warm and happy personality made every appointment a real pleasure.</p>
-                    <p>Thank you to Josh Jones for this outstanding programme and service.</p>
+                    <p>I want to thank Josh because he was exactly what I needed. Every time I went to see him he would encourage me and as a result I left the gym feeling happier and stronger. He gave me the perfect balance of understanding of my circumstances, but also pushing me each time so I did not make excuses. Josh was amazingly diligent when I had questions. For example, if I had a dinner out, He would immediately look for the restaurant and the menu and always gave me advice with a positive outlook. He would tell me all the things I could eat instead of focusing on what I should not.</p>
+                    <p>His warm and happy personality made every appointment a real pleasure. Thank you to Josh Jones for your outstanding personal training.</p>
                     </div>
                 </div>
             </div>
@@ -130,8 +129,8 @@
                     </div>
                     <div class="col-right col-md-9 col-sm-9 col-xs-12 text-center-xs">
                     <h4 class="uppercase"><span>I FOUND THE WHOLE EXPERIENCE LITERALLY LIFE CHANGING</span></h4>
-                    <p>I found the programme rather inspiring as I ate regularly, very well at meal times with any sacrifice outweighed by the immediate loss of weight and the fact that I felt and still feel extremely well.</p>
-                    <p>Josh's advice and meal plans were easy to understand and follow, with an ideal amount of flexibility so that I found it natural to only concentrate on the variety of food I am allowed to eat rather than worrying about what I might be missing. The meetings and telephone calls were very helpful and it was always a real boost to see the results at a weigh in. I found Josh's encouragement and enthusiasm so infectious I would have been mortified if I had let him down by the temptation to eat something I shouldn't and then seeing a slowing in progress.</p>
+                    <p>After going to my first consultation, Josh understood my goals and reccomended one of his programmes. I found the programme rather inspiring as I ate regularly, very well at meal times and still found it easy to shed unwanted fat in the gym.</p>
+                    <p>Josh's advice and meal plans were easy to understand and follow, with an ideal amount of flexibility so that I found it natural to only concentrate on the variety of food I am allowed to eat rather than worrying about what I might be missing. Personal training sessions and telephone calls were very helpful and it was always a real boost to see the results at a weigh in. I found Josh's encouragement and enthusiasm so infectious I would have been mortified if I had let him down by the temptation to eat something I shouldn't and then seeing a slowing in progress.</p>
                     <p>I felt it was a team effort with high praise a meaningful reward. The successful progress building to make this a new way of life.</p>
                     <p>I was commended often on my willpower, but it was not a sacrifice and I found the whole experience literally life changing.</p>
                     </div>
@@ -146,7 +145,7 @@
                     </div>
                     <div class="col-right col-md-9 col-sm-9 col-xs-12 text-center-xs">
                     <h4 class="uppercase"><span>IF YOU WANT TO LOSE WEIGHT ,AND KEEP IT OFF, IN A SIMPLE AND EFFECTIVE WAY THEN THIS IS THE RIGHT STEP FOR YOU.</span></h4>
-                    <p>Having seen my weight fluctuate over the years and having reached the big 50 I was really looking for sensible diet advice that worked. A couple of friends recommended the Josh Jones Method to me so I decided to give it a go. I was not disappointed! Gently guided by the wonderful Mr Jones, I lost a stone in weight and am now in a size 8 for the first time in years. Josh was a charming and knowledgeable support who made it all very easy to understand and who encouraged me throughout the 12 week programme. I can't recommend highly enough the principles Josh Jones espouses. If you want to lose weight ,and keep it off, in a simple and effective way then this is the right step for you.</p>
+                    <p>Having seen my weight fluctuate over the years and having reached the big 50 I was really looking for sensible diet and fitness advice that worked. A couple of friends recommended the Josh Jones Method to me so I decided to give it a go. I was not disappointed! Gently guided by the wonderful Mr Jones, I lost a stone in weight and am now in a size 8 for the first time in years. Josh was a charming and knowledgeable support who made it all very easy to understand and who encouraged me throughout the 12 week programme. I can't recommend highly enough the principles Josh Jones espouses. If you want to lose weight ,and keep it off, in a simple and effective way then this is the right step for you.</p> 
                     </div>
                 </div>
             </div>
