--- a/Programmes.html
+++ b/Programmes.html
@@ -189,11 +189,10 @@
                     <img class="homepic" src="abland.jpg" alt="JJPT image" width="100%" height="100%">    
                     </div>
                     <div class="col-right col-md-9 col-sm-9 col-xs-12 text-center-xs">
-                    <h4 class="uppercase"><span>I FOUND THE WHOLE EXPERIENCE LITERALLY LIFE CHANGING</span></h4>
-                    <p>After going to my first consultation, Josh understood my goals and reccomended one of his programmes. I found the programme rather inspiring as I ate regularly, very well at meal times and still found it easy to shed unwanted fat in the gym.</p>
-                    <p>Josh's advice and meal plans were easy to understand and follow, with an ideal amount of flexibility so that I found it natural to only concentrate on the variety of food I am allowed to eat rather than worrying about what I might be missing. Personal training sessions and telephone calls were very helpful and it was always a real boost to see the results at a weigh in. I found Josh's encouragement and enthusiasm so infectious I would have been mortified if I had let him down by the temptation to eat something I shouldn't and then seeing a slowing in progress.</p>
-                    <p>I felt it was a team effort with high praise a meaningful reward. The successful progress building to make this a new way of life.</p>
-                    <p>I was commended often on my willpower, but it was not a sacrifice and I found the whole experience literally life changing.</p>
+                    <h4 class="uppercase"><span>I FOUND THE WHOLE EXPERIENCE LIFE CHANGING</span></h4>
+                   <p>After going to my first consultation, Josh understood my goals and we got to work. I found the programme rather inspiring as I ate regularly, very well at meal times and still found it easy to shed unwanted fat in the gym.</p>
+                    <p>Josh's advice and meal plans were easy to understand and follow, with an amount of flexibility so that I found it natural to only concentrate on the variety of food I am allowed to eat. Personal training sessions and telephone calls were very helpful and it was always a real boost to see the results at a weigh in. I found Josh's encouragement and enthusiasm so infectious I would have been mortified if I had let him down by the temptation to eat something I shouldn't.</p>
+                    <p>I felt it was a team effort with high praise a meaningful reward. It is now a new way of life.</p>
                     </div>
                 </div>
             </div>
