--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner" role="listbox">
                     <div class="item active">
-                        <center><img src="Images/slider.jpg" width="100%" height="auto" alt="DWllp image"></center>
+                        <center><img src="Images/slider.jpg" width="100%" height="auto" max-height="866" alt="DWllp image"></center>
                         <div class="carousel-caption">
                             <div class="col-lg-6 col-md-8 hidden-sm hidden-xs opacbox">
                                 <h2>Welcome</h2>
@@ -67,7 +67,7 @@
                     </div>
 
                     <div class="item">
-                        <center><img src="Images/slider1.jpg" width="100%" height="auto" alt="DWllp image"></center>
+                        <center><img src="Images/slider1.jpg" width="100%" height="auto" max-height="866" alt="DWllp image"></center>
                         <div class="carousel-caption">
                             <div class="col-lg-6 col-md-8 hidden-sm hidden-xs opacbox">
                                 <h2>Sectors</h2>
@@ -77,7 +77,7 @@
                     </div>
 
                     <div class="item">
-                        <center><img src="Images/slider2.jpg" width="100%" height="auto" alt="DWllp image"></center>
+                        <center><img src="Images/slider2.jpg" width="100%" height="auto" max-height="866" alt="DWllp image"></center>
                         <div class="carousel-caption">
                             <div class="col-lg-6 col-md-8 hidden-sm hidden-xs opacbox">
                                 <h2>Contact</h2>
