--- a/Shop.html
+++ b/Shop.html
@@ -360,7 +360,7 @@
                     </div>
                         
                     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                        <h4><a href="#">Like these products?</a>
+                        <h4><h4 href="#">Like these products?</h4>
                         </h4>
                         <p>If you would like to purchase any of these products, or have any questions, then get in contact!</p>
                         <a class="btn btn-primary" href="Contact.html">Contact Josh</a>
