--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 </a>
             </div>
             <div class="text-center col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <a id="tester" href="#">
+                <a id="tester" href="Blog.html">
                     <h3 id="head-text" style="color:black;">Blog</h3>
                     <img class="homepic" src="blog.jpg" alt="JJPT image" width="90%" height="90%">
                     <p style="color:black;">Here, you'll discover what's new in the fitness world, including the latest views on nutrition and sports supplements as well as little known tips and secrets that will help fast track your success.</p>
