--- a/About.html
+++ b/About.html
@@ -100,7 +100,7 @@
         <section id="testimonials">
         <div class="container">
         <div class="row">
-        <div class="text-center col-lg-12 col-md-12 col-sm-4=12 hidden-xs">
+        <div class="text-center col-lg-12 col-md-12 hidden-sm hidden-xs">
             <h2>TESTIMONIALS</h2>
         <div id="testimonialCarousel" class="carousel slide hidden-xs">
 
