--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </nav>
 
     <!-- Half Page Image Background Carousel Header -->
-    <header id="myCarousel" class="carousel slide hidden-xs">
+    <header id="myCarousel" class="carousel slide hidden-sm hidden-xs">
         <!-- Indicators -->
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -201,7 +201,7 @@
         <section id="testimonials">
             <div class="container">
                 <div class="row">
-                    <div class="text-center col-lg-12 col-md-12 col-sm-4=12 hidden-xs">
+                    <div class="text-center col-lg-12 col-md-12 hidden-sm hidden-xs">
                         <h2>TESTIMONIALS</h2>
                         <div id="testimonialCarousel" class="carousel slide hidden-xs">
 
