--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="container">
 
         <div class="row">
-            <div class="text-center col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="text-center col-lg-12 col-md-12 col-sm-12 col-xs-12 ptheader">
                 <h2>PERSONAL TRAINING</h2>
             </div>
             <div class="text-center col-lg-3 col-md-3 col-sm-6 col-xs-12">
